# nonebot-desktop-wing

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
nonebot_desktop_wing/: __init__.py  constants.py  models.py  molecules.py  project.py  resources.py  utils.py
