[project]
name = "nonebot-desktop-wing"
version = "0.3.0"
description = "Wings for NoneBot desktop applications."
authors = [
    {name = "HivertMoZara", email = "worldmozara@163.com"},
]
license = {text = "MIT"}
dependencies = [
    "nb-cli>=1.2.2",
    "pydantic>=1.10,<2",
    "python-dotenv~=1.0.0",
    "httpx>=0.23",
    "typing-extensions>=4.5.0"
]
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/nonedesktop/nonebot-desktop-wing"
Repository = "https://github.com/nonedesktop/nonebot-desktop-wing"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.pyi"]
